@@ -2,18 +2,16 @@ package tests;
 
 import dataproviders.CartDataProvider;
 import endpoints.Carts;
-import endpoints.Products;
 import enums.UserRole;
 import helpers.CartHelper;
-import helpers.ProductHelper;
 import io.restassured.response.Response;
 import io.restassured.specification.ResponseSpecification;
-import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import payloads.request.CartPOJO;
 import payloads.request.CartProductPOJO;
 import payloads.response.CartResponsePOJO;
 import testBase.BaseClass;
+import testData.CartTestDataFactory;
 
 import java.time.LocalDate;
 import java.util.*;
@@ -25,11 +23,11 @@ public class CartsTest extends BaseClass {
 
 
     @Test
-    public void getAllCarts(){
-
-        Carts.getCarts(UserRole.USER).then().spec(success200())
-                .body("date",notNullValue());
-
+    public void shouldGetAllCarts() {
+        Carts.getCarts(UserRole.USER)
+                .then()
+                .spec(success200())
+                .body("size()", greaterThanOrEqualTo(0));
     }
 
     @Test
@@ -45,11 +43,12 @@ public class CartsTest extends BaseClass {
     @Test(dataProvider = "createCart", dataProviderClass = CartDataProvider.class)
     public void addToCart(String message , int numberOfProducts , UserRole role , ResponseSpecification resp){
 
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.createTestCartProduct(numberOfProducts);
+        List<CartProductPOJO> products =
+                CartHelper.randomProducts(numberOfProducts, role);
 
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,role);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, role);
 
-        Carts.createCart(cartPOJO,role)
+        Carts.createCart(cart,role)
                 .then()
                 .spec(resp);
     }
@@ -57,11 +56,12 @@ public class CartsTest extends BaseClass {
     @Test(dataProvider = "negativeTestCart",dataProviderClass = CartDataProvider.class)
     public void negativeCartTests(String message,UserRole role,ResponseSpecification resp){
 
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.negativeTestCartProduct(message);
+        List<CartProductPOJO> products =
+                CartHelper.negativeProducts(message, role);
 
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,role);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, role);
 
-        Carts.createCart(cartPOJO,role)
+        Carts.createCart(cart,role)
                 .then()
                 .spec(resp);
 
@@ -70,16 +70,24 @@ public class CartsTest extends BaseClass {
     @Test
     public void updateCartQuantity(){
 
-        Response resp = Carts.getCarts(UserRole.USER).then().extract().response();
-        int cartId = resp.then().extract().jsonPath().getInt("[0].id");
-        int quantity  = resp.then().extract().jsonPath().getInt("[0].products[0].quantity");
+        int cartId = Carts.createCart(
+                        CartTestDataFactory.createTestCart(
+                                CartHelper.randomProducts(1, UserRole.USER),
+                                UserRole.USER), UserRole.USER)
+                .then().extract().jsonPath().getInt("id");
 
-        CartPOJO cartPOJO = CartHelper.updateCartQuantity(cartId,UserRole.USER);
+        CartResponsePOJO cart =
+                Carts.getCartById(cartId, UserRole.USER)
+                        .then().extract().as(CartResponsePOJO.class);
 
-        Response response = Carts.updateCart(cartId , cartPOJO , UserRole.USER).then().extract().response();
+        int oldQty = cart.getProducts().get(0).getQuantity();
 
-        response.then().spec(success200())
-                .body("products[0].quantity" , equalTo(quantity+1) );
+        CartPOJO updated = CartTestDataFactory.updateCartQuantity(cart, UserRole.USER);
+
+        Carts.updateCart(cartId, updated, UserRole.USER)
+                .then()
+                .spec(success200())
+                .body("products[0].quantity", equalTo(oldQty + 1));
 
 
     }
@@ -89,11 +97,12 @@ public class CartsTest extends BaseClass {
     public void deleteCart(String message , int numberOfProducts , UserRole role , ResponseSpecification resp) {
 
 
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.createTestCartProduct(numberOfProducts);
+        List<CartProductPOJO> products =
+                CartHelper.randomProducts(numberOfProducts, role);
 
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,role);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, role);
 
-        Response createCartResponse = Carts.createCart(cartPOJO,role);
+        Response createCartResponse = Carts.createCart(cart,role);
 
         int cartId = createCartResponse.jsonPath().getInt("id");
 
@@ -111,7 +120,7 @@ public class CartsTest extends BaseClass {
     @Test(dataProvider = "invalidCartId", dataProviderClass = CartDataProvider.class)
     public void deleteCartByInvalidId(UserRole role){
 
-        int invalidId = CartHelper.getCartId(role) + 1000;
+        int invalidId = new Random().nextInt(100000) + 99999;
 
         Carts.deleteCart(invalidId, role)
                 .then()
@@ -121,7 +130,7 @@ public class CartsTest extends BaseClass {
     @Test(dataProvider = "invalidCartId", dataProviderClass = CartDataProvider.class)
     public void getCartByInvalidId(String message,UserRole role, ResponseSpecification resp){
 
-        int invalidId = CartHelper.getCartId(role) + 1000;
+        int invalidId = new Random().nextInt(100000) + 99999;
 
         Carts.getCartById(invalidId, role)
                 .then()
@@ -130,13 +139,14 @@ public class CartsTest extends BaseClass {
 
 
     @Test(dataProvider = "AccessTest", dataProviderClass = CartDataProvider.class)
-    public void CaertAccessTest(String message , int numberOfProducts , UserRole role , UserRole accessedBy, ResponseSpecification resp ) {
+    public void CarrtAccessTest(String message , int numberOfProducts , UserRole role , UserRole accessedBy, ResponseSpecification resp ) {
 
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.createTestCartProduct(numberOfProducts);
+        List<CartProductPOJO> products =
+                CartHelper.randomProducts(numberOfProducts, role);
 
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,role);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, role);
 
-        Response createResp = Carts.createCart(cartPOJO, role);
+        Response createResp = Carts.createCart(cart, role);
         int cartId = createResp.jsonPath().getInt("id");
 
         // Try accessing as USER (not owner)
@@ -149,15 +159,16 @@ public class CartsTest extends BaseClass {
     @Test(dataProvider = "updateByAccessTest", dataProviderClass = CartDataProvider.class)
     public void UpdateCartByAccess(int numberOfProducts, UserRole updatingOf , UserRole updatingBy,ResponseSpecification resp) {
 
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.createTestCartProduct(numberOfProducts);
+        List<CartProductPOJO> products =
+                CartHelper.randomProducts(numberOfProducts, updatingOf);
 
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,updatingOf);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, updatingOf);
 
-        Response createResp = Carts.createCart(cartPOJO, updatingOf);
+        Response createResp = Carts.createCart(cart, updatingOf);
         int cartId = createResp.jsonPath().getInt("id");
-        cartPOJO.setDate(LocalDate.now().toString());
+        cart.setDate(LocalDate.now().toString());
 
-        Carts.updateCart(cartId, cartPOJO, updatingBy)
+        Carts.updateCart(cartId, cart, updatingBy)
                 .then()
                 .spec(resp);
     }
@@ -165,48 +176,52 @@ public class CartsTest extends BaseClass {
     @Test(dataProvider = "duplicateProductTest", dataProviderClass = CartDataProvider.class)
     public void duplicateProductShouldMergeQuantity(int numberOfProducts, UserRole role) {
 
-        // Step 2: Create cart with duplicate product entries
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.createTestCartProduct(numberOfProducts);
+        List<CartProductPOJO> products =
+                CartHelper.randomProducts(numberOfProducts, role);
 
-        CartProductPOJO first = cartProductPOJOList.get(0);
-        cartProductPOJOList.add(first);
-        int duplicatedProductId = first.getProductId();
-        int requestQty = first.getQuantity();
+        CartProductPOJO first = products.get(0);
+        products.add(first);
 
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,role);
+        int productId = first.getProductId();
+        int qty = first.getQuantity();
 
-        Response createResponse =
-                Carts.createCart(cartPOJO, role);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, role);
 
-        int cartId = createResponse.jsonPath().getInt("id");
-
-        // Step 3: Verify quantity merged
-        Carts.getCartById(cartId, UserRole.USER)
+        int cartId = Carts.createCart(cart, role)
                 .then()
-                .statusCode(200)
-                .body("products.size()", greaterThan(0))
-                .body("products.find { it.productId == " + duplicatedProductId + " }.quantity",
-                        equalTo(2*requestQty));
+                .extract()
+                .jsonPath()
+                .getInt("id");
+
+        Carts.getCartById(cartId, role)
+                .then()
+                .spec(success200())
+                .body("products.find { it.productId == " + productId + " }.quantity",
+                        equalTo(qty * 2));
     }
 
     @Test(dataProvider = "numberOfCartsTest", dataProviderClass = CartDataProvider.class)
     public void userShouldHaveOnlyOneCart(int numberOfProducts , UserRole role) {
 
+        List<CartProductPOJO> products =
+                CartHelper.randomProducts(numberOfProducts, role);
 
-        List<CartProductPOJO> cartProductPOJOList = CartHelper.createTestCartProduct(numberOfProducts);
-        CartPOJO cartPOJO = CartHelper.createTestCart(cartProductPOJOList,role);
+        CartPOJO cart = CartTestDataFactory.createTestCart(products, role);
 
         // First creation
-        Carts.createCart(cartPOJO, role);
+        Carts.createCart(cart, role).then().spec(success200());
 
-        CartProductPOJO first = cartPOJO.getProducts().getFirst();
-        first.setQuantity(first.getQuantity()+1);
-        // Second creation
-        Carts.createCart(cartPOJO, role);// updated, not new
+        // Modify quantity
+        CartProductPOJO first = cart.getProducts().get(0);
+        first.setQuantity(first.getQuantity() + 1);
+
+        // Second creation (should update, not create new)
+        Carts.createCart(cart, role).then().spec(success200());
 
         // Verify only 1 cart exists
         Carts.getCarts(role)
                 .then()
+                .spec(success200())
                 .body("size()", equalTo(1));
     }
 
